<resources>
    <string name="app_name">aicaipiao2</string>
    <string name="xsjt_text">精彩玩法“养成记”</string>
    <string name="zjtj_text">跟大神，中大奖</string>
    <string name="hdtj_text">精彩活动，回馈新老用户</string>
    <string name="djzl_text">沾沾喜气，中百万大奖</string>
    <string name="zb_text">每晚08:00准时开播</string>
    <string name="yxtj_text">寻找更多游戏，赢更多大奖</string>
    <string name="jfsc_text">赢积分，换豪礼</string>>
</resources>
